--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "productManager.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/app.js",
-    "dev": "nodemon ./src/app.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,13 @@
     "express-handlebars": "^7.0.7",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "multer": "^1.4.5-lts.1",
+    "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
