--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
-    "mongoose": "^7.2.2",
-    "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1",
-    "multer": "^1.4.5-lts.1",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.2.2",
+    "mongoose-paginate-v2": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.6.1",
+    "faker": "^5.5.3",
+    "from": "^0.1.7",
+    "import": "^0.0.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
